// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`protect should not get exp if protect enemy 1`] = `
"*corporis* пытался атаковать *quisquam*, но у него не получилось
_Защита_ *quisquam*: 📖163,*corporis*: 📖0"
`;

exports[`protect should protect player 1`] = `
"*corporis* пытался атаковать *quisquam*, но у него не получилось
_Защита_ *quisquam*: 📖220"
`;
